log
Thu 20 Apr 2023 04:52:22 PM UTC: 
 tests:  1|8
total_score: 0/70
8d8e309
Thu 20 Apr 2023 05:07:58 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  8|7
total_score: 10/70
1c43e65
Thu 20 Apr 2023 05:18:03 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
5e307cc
Thu 20 Apr 2023 05:33:16 PM UTC: 
 treemap.c | 35 +++++++++++++++++++++++++++++++++++
 1 file changed, 35 insertions(+)
 tests:  11|6
total_score: 15/70
2754b38
Thu 20 Apr 2023 05:37:04 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
00b9862
Fri 21 Apr 2023 07:20:05 PM UTC: 
 treemap.c | 38 +++++++++++++++++---------------------
 1 file changed, 17 insertions(+), 21 deletions(-)
 tests:  13|5
total_score: 25/70
dc3de6a
Fri 21 Apr 2023 07:35:12 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
81a74fa
Sat 22 Apr 2023 05:33:45 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:5: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
  105 |     treeNode * parent = node->parent;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:105:25: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
  105 |     treeNode * parent = node->parent;
      |                         ^~~~
treemap.c:106:14: error: request for member ‘left’ in something not a structure or union
  106 |     if(parent->left == node)
      |              ^~
treemap.c:108:13: error: request for member ‘left’ in something not a structure or union
  108 |       parent->left = NULL;
      |             ^~
treemap.c:111:13: error: request for member ‘right’ in something not a structure or union
  111 |       parent->right = NULL;
      |             ^~
cc1: all warnings being treated as errors
Compilation failed
85ceb1d
